Add XML parse in File-handle service - add 'paths' in tsconfig.json - add 'allowedCommonJsDependencies' in angular.json - ex. https://stackoverflow.com/a/67808287

--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": ["xml2js"]
           },
           "configurations": {
             "production": {
