--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/material": "^13.3.0",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
+    "@angular/pwa": "^13.3.0",
     "@angular/router": "~13.3.0",
+    "@angular/service-worker": "~13.3.0",
     "@types/xml2js": "^0.4.9",
     "angular-cli-ghpages": "^1.0.0",
     "angular-split": "^13.2.0",
