Build with subresource-integrity amend to 985030c3

--- a/angular.json
+++ b/angular.json
@@ -38,6 +38,7 @@
           },
           "configurations": {
             "production": {
+              "subresourceIntegrity": true,
               "budgets": [
                 {
                   "type": "initial",
