Disable Inline Critical CSS

--- a/angular.json
+++ b/angular.json
@@ -39,6 +39,14 @@
           "configurations": {
             "production": {
               "subresourceIntegrity": true,
+              "optimization": {
+                "scripts": true,
+                "styles": {
+                  "minify": true,
+                  "inlineCritical": false
+                },
+                "fonts": false
+              },
               "budgets": [
                 {
                   "type": "initial",
