--- a/package.json
+++ b/package.json
@@ -19,18 +19,18 @@
   "license": "MIT",
   "author": "Aditya Telange",
   "dependencies": {
-    "@angular/animations": "~13.3.0",
-    "@angular/cdk": "^13.3.0",
-    "@angular/common": "~13.3.0",
-    "@angular/compiler": "~13.3.0",
-    "@angular/core": "~13.3.0",
-    "@angular/forms": "~13.3.0",
-    "@angular/material": "^13.3.0",
-    "@angular/platform-browser": "~13.3.0",
-    "@angular/platform-browser-dynamic": "~13.3.0",
-    "@angular/pwa": "^13.3.0",
-    "@angular/router": "~13.3.0",
-    "@angular/service-worker": "~13.3.0",
+    "@angular/animations": "~14.1.2",
+    "@angular/cdk": "^14.1.2",
+    "@angular/common": "~14.1.2",
+    "@angular/compiler": "~14.1.2",
+    "@angular/core": "^14.1.2",
+    "@angular/forms": "~14.1.2",
+    "@angular/material": "^14.1.2",
+    "@angular/platform-browser": "~14.1.2",
+    "@angular/platform-browser-dynamic": "~14.1.2",
+    "@angular/pwa": "^14.1.2",
+    "@angular/router": "~14.1.2",
+    "@angular/service-worker": "~14.1.2",
     "@types/xml2js": "^0.4.9",
     "angular-cli-ghpages": "^1.0.0",
     "angular-split": "^13.2.0",
@@ -42,9 +42,9 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.0",
-    "@angular/cli": "~13.3.0",
-    "@angular/compiler-cli": "~13.3.0",
+    "@angular-devkit/build-angular": "^14.1.2",
+    "@angular/cli": "^14.1.2",
+    "@angular/compiler-cli": "~14.1.2",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
@@ -53,6 +53,6 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.5.2"
+    "typescript": "~4.7.4"
   }
 }
