--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/xml2js": "^0.4.9",
     "angular-cli-ghpages": "^1.0.0",
     "angular-split": "^13.2.0",
+    "js-base64": "^3.7.5",
     "rxjs": "~7.4.0",
     "stream-browserify": "^3.0.0",
     "timers-browserify": "^2.0.12",
