Add button to download response body

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/xml2js": "^0.4.9",
     "angular-cli-ghpages": "^1.0.0",
     "angular-split": "^13.2.0",
+    "file-saver": "^2.0.5",
     "js-base64": "^3.7.5",
     "rxjs": "~7.4.0",
     "stream-browserify": "^3.0.0",
@@ -46,6 +47,7 @@
     "@angular-devkit/build-angular": "^14.2.13",
     "@angular/cli": "^14.2.12",
     "@angular/compiler-cli": "~14.1.2",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
